trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 290
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
